playbooks/yaml/argocd-apps/readarr/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: readarr
  namespace: media
  labels:
    app: readarr
spec:
  type: LoadBalancer
  loadBalancerIP: 192.168.1.131
  ports:
    - port: 8787
      targetPort: 8787
      protocol: TCP
      name: http
  selector:
    app: readarr
    component: main
